Add firebase deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thanhleportfolio",
-  "homepage": "https://thanhle98.github.io/resume/",
+  "homepage": "https://thanhle-resume.firebaseapp.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
