--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,12 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": []
+    "redirects": [],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
